@@ -1,2 +1,0 @@
-Net::Flickr provides an elegant, Ruby-fied implementation of Flickr's
-REST API.
