@@ -1,15 +1,0 @@
-# $NetBSD: Makefile,v 1.3 2013/07/07 16:16:51 taca Exp $
-
-DISTNAME=	net-flickr-0.0.1
-CATEGORIES=	www
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-#HOMEPAGE=	http://wonko.com/software/net-flickr/
-HOMEPAGE=	http://code.google.com/p/net-flickr/
-COMMENT=	Flickr REST client
-LICENSE=	modified-bsd
-
-DEPENDS+=	${RUBY_PKGPREFIX}-hpricot>=0.5:../../textproc/ruby-hpricot
-
-.include "../../lang/ruby/gem.mk"
-.include "../../mk/bsd.pkg.mk"
