@@ -1,14 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2010/09/10 13:13:31 taca Exp $
-${GEM_HOME}/cache/${GEM_NAME}.gem
-${GEM_LIBDIR}/LICENSE
-${GEM_LIBDIR}/lib/net/flickr.rb
-${GEM_LIBDIR}/lib/net/flickr/auth.rb
-${GEM_LIBDIR}/lib/net/flickr/errors.rb
-${GEM_LIBDIR}/lib/net/flickr/list.rb
-${GEM_LIBDIR}/lib/net/flickr/people.rb
-${GEM_LIBDIR}/lib/net/flickr/person.rb
-${GEM_LIBDIR}/lib/net/flickr/photo.rb
-${GEM_LIBDIR}/lib/net/flickr/photolist.rb
-${GEM_LIBDIR}/lib/net/flickr/photos.rb
-${GEM_LIBDIR}/lib/net/flickr/tag.rb
-${GEM_HOME}/specifications/${GEM_NAME}.gemspec
