@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.3600 2017/09/04 18:12:26 adam Exp $
+$NetBSD: CHANGES-2017,v 1.3601 2017/09/04 18:16:49 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -5052,3 +5052,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated net/py-s3transfer to 0.1.11 [adam 2017-09-04]
 	Updated net/py-boto3 to 1.4.7 [adam 2017-09-04]
 	Updated net/py-awscli to 1.11.145 [adam 2017-09-04]
+	Removed www/ruby-net-flickr [wiz 2017-09-04]
